resolved scss error in spacings and header file
resolved scss error in spacings and header file

--- a/scss/base/_spacings.scss
+++ b/scss/base/_spacings.scss
@@ -19,7 +19,7 @@
         max-width: 87rem;
     }
     
-    @media (max-width: $bp-laptop-lg) {
+    @media (max-width: $bp-tablet-lg) {
         max-width: 80rem;
     }
 
